Release 2.42.4

Copyright (c) 1998-2011 Paulo Moura.        All Rights Reserved.
Logtalk is free software.  You can redistribute it and/or modify
it under the terms of the "Artistic License 2.0" as published by 
The Perl Foundation. Consult the "LICENSE.txt" file for details.
================================================================


RELEASE NOTES
=============


2.42.4 - March ??, 2011

    Added to the "logtalk" built-in object two sets of utility predicates:
    decompile_predicate_heads/2-4 and decompile_predicate_indicators/2-4.
    Marked the decompile_predicate_head/4 and decompile_predicate_indicator/4
    as deprecated. Changed the utility predicates that compile/decompile
    predicate heads/indicators to no longer accept conjunctions in the first
    argument.

    Added support for preserving the scope information for operators declared
    using scope directives during compile time. Added information on entity
    declared operators to the XML documenting files. Updated the text, PDF,
    and (X)HTML conversion scripts to print out operator information.

    Updated the XSB config file in order to support the compilation of modules
    as objects. XSB 3.3 or a later version is now required for compatibility
    with Logtalk.

    Updated the "encodings" example in order to ensure that the there is no
    whitespace before the encoding/1 directive.

    Updated the "attvars" example in order to support B-Prolog and XSB.

    Added an "attvarsp" experimental example of using attributed variables
    within Logtalk parametric objects and parametric categories (requires
    an experimental branch of SWI-Prolog).

    Updated the "profilers" example with preliminary support for the changes
    to execution profiling in the forthcoming SICStus Prolog 4.2 version.

    Updated the "expansion" example with more sample code on how to combine
    term- and goal-expansion definitions from different hooks objects.


2.42.3 - February 21, 2011
